project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Offer__c/fields/Bonus_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Percentage__c</fullName>
    <label>Bonus Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>