project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Offer__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>